tests/fixtures/invalid/list_neg.py
# Cannot use unary - on list
x: list[int] = -[1, 2, 3]
